{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 11,
  "lineage": "cd405dab-e88c-aee4-18fc-cacd9cf36087",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/regions/asia-south2/networkEndpointGroups/nanogen-app-lb-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-06-09T02:54:43.356-07:00",
            "enable_cdn": false,
            "fingerprint": "aUypNkAryBI=",
            "generated_id": 5457987023367986188,
            "id": "projects/nanogen-prod/global/backendServices/nanogen-app-lb-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nanogen-app-lb-backend",
            "port_name": "http",
            "project": "nanogen-prod",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/backendServices/nanogen-app-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_region_network_endpoint_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.141.178",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-06-09T02:54:21.486-07:00",
            "id": "projects/nanogen-prod/global/addresses/nanogen-app-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "nanogen-app-lb-ip",
            "prefix_length": 0,
            "project": "nanogen-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/addresses/nanogen-app-lb-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/nanogen-prod/global/forwardingRules/nanogen-app-lb-http-rule",
            "ip_address": "34.120.141.178",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nanogen-app-lb-http-rule",
            "port_range": "80-80",
            "project": "nanogen-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/forwardingRules/nanogen-app-lb-http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/targetHttpProxies/nanogen-app-lb-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_global_address.default",
            "google_compute_target_http_proxy.http",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/nanogen-prod/global/forwardingRules/nanogen-app-lb-https-rule",
            "ip_address": "34.120.141.178",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nanogen-app-lb-https-rule",
            "port_range": "443-443",
            "project": "nanogen-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/forwardingRules/nanogen-app-lb-https-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/targetHttpsProxies/nanogen-app-lb-https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.default",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-09T02:54:34.160-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/nanogen-prod/global/targetHttpProxies/nanogen-app-lb-http-proxy",
            "name": "nanogen-app-lb-http-proxy",
            "project": "nanogen-prod",
            "proxy_bind": false,
            "proxy_id": 8459108585522748469,
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/targetHttpProxies/nanogen-app-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/urlMaps/nanogen-app-lb-http-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-09T02:55:30.486-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/nanogen-prod/global/targetHttpsProxies/nanogen-app-lb-https-proxy",
            "name": "nanogen-app-lb-https-proxy",
            "project": "nanogen-prod",
            "proxy_bind": false,
            "proxy_id": 4195927870034042365,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/targetHttpsProxies/nanogen-app-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/sslCertificates/nanogen-app-lb-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/urlMaps/nanogen-app-lb-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-09T02:55:16.581-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/backendServices/nanogen-app-lb-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "e22GmZA8FxQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/nanogen-prod/global/urlMaps/nanogen-app-lb-url-map",
            "map_id": 6589907310423465451,
            "name": "nanogen-app-lb-url-map",
            "path_matcher": [],
            "project": "nanogen-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/urlMaps/nanogen-app-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_region_network_endpoint_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-09T02:54:21.420-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "KkPqC-680Rc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/nanogen-prod/global/urlMaps/nanogen-app-lb-http-redirect",
            "map_id": 5415424022018677794,
            "name": "nanogen-app-lb-http-redirect",
            "path_matcher": [],
            "project": "nanogen-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nanogen-prod/global/urlMaps/nanogen-app-lb-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}